--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "invitation",
   "version": "0.1.0",
@@ -16,6 +17,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "next": "14.2.3",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
